--- a/google_appengine/proyecto/mainMenu.html
+++ b/google_appengine/proyecto/mainMenu.html
@@ -31,7 +31,7 @@
 	<a href="/addGame"><img width="80px" height="20px" title="addGame" class="styled-button" /></a>
 </div>
 <div id="dvAddTeam">
-	<a href="/addGame"><img width="80px" height="20px" title="addTeam" class="styled-button" /></a>
+	<a href="/addTeam"><img width="80px" height="20px" title="addTeam" class="styled-button" /></a>
 </div>
 <div id="dvjugadores">
     {% for jugador in jugadores %}
@@ -45,7 +45,7 @@
     {% endfor %}
 </div>
 <div id="dvAddPlayer">
-	<a href="/addGame"><img width="80px" height="20px" title="addPlayer" class="styled-button" /></a>
+	<a href="/addPlayer"><img width="80px" height="20px" title="addPlayer" class="styled-button" /></a>
 </div>
 </body>
 </html>
