--- a/google_appengine/pruebas/index.html
+++ b/google_appengine/pruebas/index.html
@@ -1,11 +1,56 @@
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>ROL STATS</title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Plantilla básica de Bootstrap</title>
+ 
+    <!-- CSS de Bootstrap -->
+    <link type="text/css"href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+ 
+    <!-- librerías opcionales que activan el soporte de HTML5 para IE8 -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container-fluid">
+    <div class="row">
+    	<div class="col-md-1">Columna 1</div>
+    	<div class="col-md-1">Columna 2</div>
+    	<div class="col-md-1">Columna 3</div>
+    	<div class="col-md-1">Columna 4</div>
+    	<div class="col-md-1">Columna 5</div>
+    	<div class="col-md-1">Columna 6</div>
+    	<div class="col-md-1">Columna 7</div>
+    	<div class="col-md-1">Columna 8</div>
+    	<div class="col-md-1">Columna 9</div>
+    	<div class="col-md-1">Columna 10</div>
+    	<div class="col-md-1">Columna 11</div>
+    	<div class="col-md-1">Columna 12</div>
 
-</head>
-<body>
-	ROL STATS
-	<td width="80%"><a href="{{access_link}}">{{user_name}}</a></td>
-</body>
+    </div>
+     <div class="row">
+     	<div class="col-md-8">Columna 1</div>
+    	<div class="col-md-4">Columna 2</div>
+     </div>
+
+     <div class="row">
+     	<div class="col-md-4">Columna 1</div>
+    	<div class="col-md-4 col-md-offset-4">Columna 2</div>
+     </div>
+     <div class="row">
+     	<h1>blablabal <small>wawewiwa</small></h1>
+     </div>
+     <div class="row">
+     	<p >eres un gilipollas</p>
+     	<p class="lead">eres un gilipollas</p>
+     </div>
+    </div><!-- /.container -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+     <script src="js/bootstrap.min.js"></script>
+      <script src="http://code.jquery.com/jquery.js"></script>
+  </body>
 </html>
