--- a/google_appengine/proyecto/addPlayer.html
+++ b/google_appengine/proyecto/addPlayer.html
@@ -1,25 +1,67 @@
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>ROL STATS</title>
-</head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PRINCIPAL</title>
+ 
+    <!-- CSS de Bootstrap -->
+    <link type="text/css"href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+ 
+    <!-- librerías opcionales que activan el soporte de HTML5 para IE8 -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
 <body>
+<div class="container">
+<div class="row">
+	<br>
+	<div class="col-md-4">
 	<form id="addGame"method="post">
-		
-		Name: <input type="text" name="name" id="edName" size="80"
+	<h2>NUEVO JUGADOR</h2>
+		<label for="edName">Nombre: </label>
+		<input class="form-control" type="text" name="name" id="edName" size="80"
 			value="{{name}}"
  			style="border:none;background-color:lightgray"/>
 		<br>
-		id: <input type="number" name="id" id="edid" size="80"
+		<label for="edid">Id(recuerda no insertar id repetida): </label>
+		<input class="form-control" type="number" name="id" id="edid" size="80"
 			value="{{id}}"
  			style="border:none;background-color:lightgray"/>
 		<br>
-		posicion: <input type="text" name="posicion" id="edid" size="80"
-			value="{{posicion}}"
- 			style="border:none;background-color:lightgray"/>
+		<label for="edpos">Posicion: </label>
+		<select class="form-control" type="text" name="posicion" id="edpos" value="{{posicion}}" >
+			<option>delantero</option>
+			<option>defensa</option>
+		</select>
 		<br>
 		
-		<input type="submit" value="guardar"/>
-		</form>
+		<input type="submit" class="btn btn-warning" value="guardar"/>
+	</form>
+	</div>
+	<div class="col-md-4">
+	<h2>LISTA JUGADORES</h2>
+	<br>
+		<div id="dvjugadores">
+
+    		{% for jugador in jugadores %}
+    		<div class="row">
+				<div id="tbljugadores">
+				<div class="col-md-5 "><p><big>id:{{jugador.id}} nombre:{{jugador.name}} posicion:{{jugador.posicion}} </big></div>
+				<div class="col-md-1 col-md-offset-4"><a class="btn btn-success" href="/player?name={{jugador.name}}">Select</a></div>
+				
+				</p>
+				</div>
+			</div>
+    		{% endfor %}
+</div>
+</div>
+</div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="http://code.jquery.com/jquery.js"></script>
 </body>
 </html>
