last push today

--- a/google_appengine/pruebas/index.html
+++ b/google_appengine/pruebas/index.html
@@ -52,5 +52,9 @@
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
      <script src="js/bootstrap.min.js"></script>
       <script src="http://code.jquery.com/jquery.js"></script>
+    <button type="button" class="navbar-toggle sidebar-toggle" data-toggle="collapse" data-target=".sidebar-ex1-collapse">
+    <span class="sr-only">Sidebar</span>
+    <span class="glyphicon glyphicon-check"></span>
+</button>
   </body>
 </html>
