--- a/google_appengine/proyecto/mainMenu.html
+++ b/google_appengine/proyecto/mainMenu.html
@@ -45,7 +45,12 @@
       		
     		</div>
   		</div>
+  		<button type="button" class="navbar-toggle sidebar-toggle" data-toggle="collapse" data-target=".sidebar-ex1-collapse">
+    <span class="sr-only">Sidebar</span>
+    <span class="glyphicon glyphicon-check"></span>
+</button>
 </nav>
+
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-5 ">
